# aimi-liver-ct

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_nnunet_dataset.ipynb  dataset.json  model_performance.ipynb  pyproject.toml  run_on_idc_data.ipynb  train.sh  training.md  training_readme.md
TotalSegFix/: Dockerfile  fix_sitk_orthoginal.py
container/: Dockerfile
container/app/dcm-meta/: ai-dicom-seg-meta.json  ne1-dicom-seg-meta.json  rad1-dicom-seg-meta.json
container/app/src/: run.py
qa-results/: qa-results.csv
